# kvf

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
example/: CMakeLists.txt
example/assets/: shader.vert  sprite.frag  sprite.vert
example/glsl/: sprite.frag  sprite.vert  triangle.vert
example/src/: app.cpp  app.hpp  log.hpp  main.cpp  scene.hpp  shader_loader.cpp  shader_loader.hpp  window.hpp
example/src/scenes/: image_viewer.cpp  image_viewer.hpp  sprite.cpp  sprite.hpp  standalone.cpp  standalone.hpp  triangle.cpp  triangle.hpp
ext/: CMakeLists.txt  depzip.json  depzip.jsonc
lib/: CMakeLists.txt
lib/cmake_src/: build_version.hpp.in
lib/include/kvf/: aspect_resize.hpp  bitmap.hpp  buffer.hpp  buffer_write.hpp  buffered.hpp  buffering.hpp  byte_array.hpp  codepoint.hpp  color.hpp  color_bitmap.hpp  command_buffer.hpp  constants.hpp  descriptor_allocator.hpp  device_block.hpp  device_waiter.hpp  error.hpp  fixed_usage_buffer.hpp  frame_index.hpp  gpu.hpp  graphics_shader.hpp  image.hpp  image_bitmap.hpp  image_writer.hpp  is_positive.hpp  kvf_fwd.hpp  next_frame_listener.hpp  panic.hpp  pipeline_state.hpp  rect.hpp  render_api.hpp  render_buffer.hpp  render_device.hpp  render_device_fwd.hpp  render_image.hpp  render_pass.hpp  render_pass_fwd.hpp  render_target.hpp  ring.hpp  ring_buffer_allocator.hpp  ring_descriptor_allocator.hpp  (+9 more)
lib/src/: build_version.hpp.in  color_bitmap.cpp  fixed_usage_buffer.cpp  image_bitmap.cpp  image_writer.cpp  kvf.cpp  log.hpp  render_device.cpp  scratch_command_buffer.cpp  ttf.cpp  util.cpp  window.cpp
lib/src/detail/: buffer.cpp  buffer.hpp  graphics_shader.cpp  image.cpp  image.hpp  render_buffer.cpp  render_buffer.hpp  render_image.cpp  render_image.hpp  render_pass.cpp  render_pass.hpp  resource_buffer.cpp  resource_buffer.hpp  resource_image.cpp  resource_image.hpp  ring_buffer_allocator.cpp  ring_buffer_allocator.hpp  vma.cpp  vma.hpp
scripts/: format_code.sh
